--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,6 @@
 .App {
   /* text-align: center; */
-  background-color: #a0aeb5;
+  background-color: #f1f3f4;
   width: 100vw;
   height: 100vh;
 }
